# DCuckooHash

./: CMakeLists.txt  DCuckooHash.c  DCuckooHash.h  README.md  main.c  sample.txt
lib/: hash_function.c
other/: 0.20140608.txt.del.cuckoo1.05.init  0.20140608.txt.del.rect1.05.search  AfterFirstStage.txt  DoubleHash.h  LinearHash.h  LinkHash.h  PeacockHash.cpp  RTBHash.h  define.h  dleftHash.cpp  hash_function.h  key-value.cpp  key-value.h  main.cpp  readme.lh  rectangleBF.sln  rectangleBF.vcxproj  rectangleBF.vcxproj.filters  rrc00.20140608.txt.del.peacock.init  rrc00.20140608.txt.del.peacock.search  rrc00.20140608.txt.del.rect.init  rrc00.20140608.txt.del.rect.search  rrc00.20140608.txt.del.rect6.search  std_bf.h
